# v6gel

./: .gitignore  Makefile  README.md  install_tools.py  pyproject.toml  tools.lock.json
assets/: config.json
assets/backs/: backs0.json
assets/decals/: decals0.json
assets/design/: info
assets/levels/: lv0.json  lv0_data.json  lv0_gfx.json  lv1.json  lv1_data.json  lv1_gfx.json
assets/music/: song01.json
assets/palettes/: pal_lv0.json  pal_lv1.json  pal_menu.json
assets/sprites/: bomb.json  burner.json  cat.json  firepool.json  goose.json  hero.json  knight.json  npc.json  npc4.json  scythe.json  skeleton.json  snowflake.json  sword.json  tnt.json  vampire.json  vfx.json  vfx4.json
assets/text/: txt_lv0.json  txt_menu.json
assets/tiled_imgs/: ti0.json  ti0_data.json  ti0_gfx.json  tim.json  tim_data.json  tim_gfx.json
build copy/: assets_info.json  build.db  build_consts.asm  build_includes.asm
build copy/fdd/: GJ.fdd
build copy/projects/: backs0.debug.json  backs0.project.json  bomb.debug.json  bomb.project.json  burner.debug.json  burner.project.json  cat.debug.json  cat.project.json  decals0.debug.json  decals0.project.json  firepool.debug.json  firepool.project.json  font.debug.json  font.project.json  goose.debug.json  goose.project.json  hero.debug.json  hero.project.json  knight.debug.json  npc.debug.json  (+48 more)
docs/: 01-overview.md  02-building.md  03-asset-pipeline.md  04-engine-library.md  README.md
scripts/: build_assets.py  clear.py  generate_asset_projects.py  generate_const_incs_loads.py  v6export.py  v6loads.py
v6/: build.bat  v6.asm
(+148 files in other folders)
